[gd_scene load_steps=19 format=3 uid="uid://b1lbwy6reate"]

[ext_resource type="Script" uid="uid://ctpvm2olx0he8" path="res://Scripts/Enemies/BasicEnemy.gd" id="1_wjiom"]
[ext_resource type="Material" uid="uid://bqmu8g5akxawm" path="res://Shaders/Flash.tres" id="2_xb7jo"]
[ext_resource type="Texture2D" uid="uid://ccovi0b8fd1ad" path="res://Graphics/Enemies/RoboFishTiny.png" id="3_wjiom"]
[ext_resource type="PackedScene" uid="uid://diythvtq5ea55" path="res://Nodes/Enemies/EnemyFlashPlayer.tscn" id="4_xb7jo"]
[ext_resource type="Script" uid="uid://s3ysfh7um7ev" path="res://Scripts/BulletSpawner.gd" id="4_xx1jx"]
[ext_resource type="PackedScene" uid="uid://b8p14fnn4k01l" path="res://Nodes/Bullets/EnemyBullets/EnemyBullet.tscn" id="5_h6l1x"]
[ext_resource type="Script" uid="uid://5stk1gvpktyg" path="res://Scripts/BulletPattern.gd" id="6_jg5on"]
[ext_resource type="Script" uid="uid://bcj1fhoji58bm" path="res://Scripts/ItemSpawner.gd" id="7_03ujo"]
[ext_resource type="PackedScene" uid="uid://dx4wkq1qppqbh" path="res://Nodes/Effects/Explosion.tscn" id="8_oojqe"]
[ext_resource type="PackedScene" uid="uid://bmgevjgtkjqw5" path="res://Nodes/Scrap.tscn" id="9_lgqiv"]
[ext_resource type="PackedScene" uid="uid://ognrw56p3tyd" path="res://Nodes/YumFish.tscn" id="10_oj3gs"]
[ext_resource type="Script" uid="uid://duu7eqorvs2st" path="res://Scripts/BubbleSpawner.gd" id="11_biusf"]
[ext_resource type="PackedScene" uid="uid://clkaw58ubcibl" path="res://Nodes/Effects/Bubble.tscn" id="12_ms334"]

[sub_resource type="Animation" id="Animation_wc4c6"]
resource_name = "Idle"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_6wd8m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qcj7j"]
_data = {
&"Idle": SubResource("Animation_wc4c6"),
&"RESET": SubResource("Animation_6wd8m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_wc4c6"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ekvrh"]
radius = 5.0

[node name="RoboFishTiny" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_wjiom")
hp = 1
vulnerabilityThreshold = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_xb7jo")
texture = ExtResource("3_wjiom")
hframes = 2

[node name="FlashPlayer" parent="." instance=ExtResource("4_xb7jo")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qcj7j")
}

[node name="Hitbox" type="Area2D" parent="." groups=["EnemyAttack"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_wc4c6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ekvrh")

[node name="Timer" type="Timer" parent="." groups=["EnemyAttack"]]

[node name="BulletSpawner" type="Node2D" parent="."]
position = Vector2(-5, 0)
script = ExtResource("4_xx1jx")
bullet = ExtResource("5_h6l1x")
metadata/_custom_type_script = "uid://s3ysfh7um7ev"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(1.6, 0.8)

[node name="BulletPattern" type="Node" parent="."]
script = ExtResource("6_jg5on")
bullet_amount = 1
bullet_interval = 0.2
bullet_spawner = NodePath("../BulletSpawner")
metadata/_custom_type_script = "uid://5stk1gvpktyg"

[node name="ExplosionSpawner" type="Node2D" parent="."]
position = Vector2(8, 0)
script = ExtResource("7_03ujo")
item = ExtResource("8_oojqe")
random_spawn_size = Vector2(2, 5)
metadata/_custom_type_script = "uid://bcj1fhoji58bm"

[node name="ScrapSpawner" type="Node2D" parent="."]
script = ExtResource("7_03ujo")
item = ExtResource("9_lgqiv")
metadata/_custom_type_script = "uid://bcj1fhoji58bm"

[node name="FishSpawner" type="Node2D" parent="."]
script = ExtResource("7_03ujo")
item = ExtResource("10_oj3gs")
spawn_chance = 0.2
player_health_chance_mod = 0.06
metadata/_custom_type_script = "uid://bcj1fhoji58bm"

[node name="BubbleSpawner" type="Node2D" parent="."]
script = ExtResource("11_biusf")
auto_spawn = true
timer_wait_time = 1.0
random_spawn_start = true
bullet = ExtResource("12_ms334")
metadata/_custom_type_script = "uid://duu7eqorvs2st"

[connection signal="animation_finished" from="FlashPlayer" to="." method="_on_flash_player_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
